--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include requirements.txt 
-include lib/ui/build/*
-recursive-include lib/templete *
+include logicbook/ui/build/*
+recursive-include logicbook/templete *
