--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -23,8 +23,12 @@ jobs:
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
+        with:
+          path: ./website
       - name: Build website
         run: yarn build
+        with:
+          path: ./website
 
       # Popular action to deploy to GitHub Pages:
       # Docs: https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-docusaurus
