--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -22,13 +22,9 @@ jobs:
           cache-dependency-path: ./website/yarn.lock
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
-        with:
-          path: ./website
+        run: cd website && yarn install --frozen-lockfile
       - name: Build website
-        run: yarn build
-        with:
-          path: ./website
+        run: cd website && yarn build
 
       # Popular action to deploy to GitHub Pages:
       # Docs: https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-docusaurus
@@ -37,7 +33,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           # Build output to publish to the `gh-pages` branch:
-          publish_dir: ./build
+          publish_dir: ./website/build
           # The following lines assign commit authorship to the official
           # GH-Actions bot for deploys to `gh-pages` branch:
           # https://github.com/actions/checkout/issues/13#issuecomment-724415212
