--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include requirements.txt 
 include logicbook/ui/build/*
-recursive-include logicbook/templete *
+recursive-include logicbook/template *
